--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -6,6 +6,12 @@ log4j.appender.logfile=org.apache.log4j.FileAppender
 log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile.layout.ConversionPattern=%d{yyyy-MM-dd HH\:mm\:ss} %p [%c] %m%n
 log4j.appender.logfile.File=E:/IdeaProject/gradleTest/logs/info.log
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+log4j.appender.console.Threshold=DEBUG
+log4j.appender.console.ImmediateFlush=true
+log4j.appender.console.Target=System.err
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+log4j.appender.console.layout.ConversionPattern=[%-5p] %d(%r) --> [%t] %l: %m %x %n
 
 
 
